Bug 1211479 - Errors when parsing substituting variables should include the generated string to help diagnose the issue. r=bz